Replace getFirst() with get(0) for enemy type selection
Changed the method of retrieving the first enemy type from getFirst() to get(0) when spawning a new enemy. This improves compatibility with standard Java List implementations.